# sociosim

./: .coverage  .dockerignore  .env.example  .gitignore  AGENTS.md  AGGREGATE_FIT_NOTE.md  AUDIT_LOG.md  AUDIT_REMEDIATION_REPORT.md  BACKTEST_REPORT.md  BASELINE_AUDIT_SNAPSHOT.md  BENCHMARK_REPORT.md  CALIBRATION_REPORT.md  CHANGELOG.md  Dockerfile  FABLE_AUDIT_LOG.md  HANDOFF.md  KNOWN_LIMITATIONS.md  Makefile  PLAN_P2.md  README.md  SECURITY.md  SOURCE_LEDGER.md  VALIDATION_REPORT.md  pyproject.toml  requirements.txt  run.py
.github/workflows/: ci.yml  release.yml
docs/: ACCESSIBILITY.md  AGGREGATE_FIT_FINDINGS.md  ASSET_MANIFEST.md  ASSET_QA.md  DATA_MANIFEST.md  MODELS.md  RELEASE.md  RESEARCH_EVIDENCE.md  SETTINGS_SWEEP.md  STAT_VALIDATION_HANDOFF.md  accessibility.md  agent-integration.md  claim-provenance.md  data-governance.md  entrepreneur-market-lab.md  ethics_and_limitations.md  legal_compliance.md  metric-catalog.md  nist_ai_rmf_map.md  performance-benchmarks.md  release-checklist.md  scenario-authoring.md  security-review.md  society-policy-lab.md  usage.md  validation-ladder.md
docs/audits/: 2026-06-27-outside-audit.md  (+11 more)
examples/: ad_experiment_demo.py  policy_stress_demo.py  quickstart.py
scripts/: asset_contactsheet_review.py  asset_qa.py  audit_deps.py  claim_scan.py  evidence_gate.py  fetch_moderation_benchmarks.py  generate_v4_assets.py  license_inventory.py  numeric_provenance_scan.py  provenance_allowlist.json  run_fable_audit.ps1  secret_scan.py  seed_protocol_eval.py  settings_sweep.py  verify_release.py  verify_sources.py  wheel_qa.py
socio_sim/: __init__.py  accel.py  behavior.py  config.py  engine.py  evidence.py  llm_bootstrap.py  ops.py  pipeline.py  presets.py  rng.py  security.py  stats.py
tests/: conftest.py  test_a11y_axe.py  test_accel.py  test_ads.py  test_agents.py  test_aggregate_fit_profile.py  test_analytics.py  test_asset_v4.py  test_backtest.py  test_benchmark_eval.py  test_calibration.py  test_campaigns.py  test_ci_workflow.py  test_claim_scan.py  test_config.py  test_content.py  test_determinism_regression.py  test_e2e_playwright.py  test_engine.py  test_evidence.py  test_experiments.py  test_feed.py  test_graph.py  test_lens.py  test_llm_adapter.py  test_llm_cache.py  test_logs.py  test_mc_modes.py  test_media.py  test_ml_classifier.py  test_moderation.py  test_numeric_provenance.py  test_ops.py  test_persona_flows.py  test_pipeline.py  test_policy.py  test_presets.py  test_properties.py  test_rate_support.py  test_rng.py  (+13 more)
(+74 files in other folders)
