[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "socio-sim"
version = "0.1.0"
description = "SocioSim: a reproducible, uncertainty-quantified, policy-as-code social-interaction simulator (research use only)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "numpy>=1.26",
    "networkx>=3.2",
    "scipy>=1.11",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6", "pytest-cov>=5.0", "hypothesis>=6.0", "bandit>=1.7", "pip-audit>=2.7"]
e2e = ["pytest-playwright>=0.5", "axe-playwright-python>=0.1"]
viz = ["matplotlib>=3.8"]
llm = ["anthropic>=0.40"]
security = ["bandit>=1.7", "pip-audit>=2.7"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# Pyflakes (F) + a pragmatic subset of pycodestyle (syntax/logic, not cosmetics).
select = ["E4", "E7", "E9", "F", "W"]

[tool.setuptools.packages.find]
include = ["socio_sim*"]

[tool.setuptools.package-data]
"socio_sim.policy" = ["packs/*.yaml"]
"socio_sim" = ["data/benchmarks/*.json", "data/benchmarks/moderation/*.jsonl.gz"]
"socio_sim.web" = ["static/*.html", "static/*.css", "static/*.js", "static/assets/*.png"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
markers = [
    "slow: statistical/calibration tests that take longer",
]
